src/test/deca/codegen/invalid/SansObjet/ArithmeticFloatOverflow-ConvInt.deca
// Description:
//    Overflow for a conversion from a float to an int
//
// Results:
//     ERROR: float_arithmetic_overflow
//
// History:
//    created on 14/01/2022

{
    int x = (int) (0x1.0p31);
}
